# word-game

./: .gitignore  Dockerfile  ON_CHAIN_VERIFICATION.md  README.md  compose.yaml  proejct  run.bash  wavehack
client/: craco.config.js  package-lock.json  package.json
client/public/: index.html
client/src/: App.css  App.js  index.js
client/src/components/Button/: index.jsx  styles.module.css
client/src/context/: LineraContext.js
client/src/pages/Home/: index.jsx  styles.module.css
client/src/pages/Result/: index.jsx  styles.module.css
client/src/pages/Room/: index.jsx  styles.module.css
word-duel/: Cargo.toml
word-duel/src/: contract.rs  lib.rs  service.rs  state.rs
