[package]
name = "word-duel"
version = "0.1.0"
edition = "2021"

[dependencies]
linera-sdk = "0.15.7"
async-graphql = { version = "=7.0.17", default-features = false }
async-graphql-value = "=7.0.17"
serde = { version = "1.0", features = ["derive"] }
bcs = "0.1"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "word_duel_contract"
path = "src/contract.rs"

[[bin]]
name = "word_duel_service"
path = "src/service.rs"
